@@ -625,6 +625,7 @@ enum
 #define SYSTEM_ACCESS_MANAGE_SUMMARY_TBLS 0x01000000
 #define SYSTEM_ACCESS_REPORTING_SERVER    0x02000000
 #define SYSTEM_ACCESS_XMPP_COMMANDS       0x04000000
+#define SYSTEM_ACCESS_MANAGE_IMAGE_LIB    0x08000000
 
 #define SYSTEM_ACCESS_FULL                0x07FFFFFF
 
