@@ -37,6 +37,7 @@ public class UserAccessRights
    public static final int SYSTEM_ACCESS_MANAGE_SUMMARY_TBLS = 0x01000000;
    public static final int SYSTEM_ACCESS_REPORTING_SERVER    = 0x02000000;
    public static final int SYSTEM_ACCESS_XMPP_COMMANDS       = 0x04000000;
+   public static final int SYSTEM_ACCESS_MANAGE_IMAGE_LIB    = 0x08000000;
 	
 	public static final int OBJECT_ACCESS_READ          = 0x00000001;
 	public static final int OBJECT_ACCESS_MODIFY        = 0x00000002;
