@@ -96,6 +96,7 @@ SystemRights_LoginAsMobile=P\u0159ihl\u00E1sit se jako mobiln\u00ED za\u0159\u00
 SystemRights_ManageAgents=Spravovat konfigurace agent\u016F
 SystemRights_ManageDCISummaryTables=Manage DCI summary tables
 SystemRights_ManageFiles=Spravovat soubory na serveru
+SystemRights_ManageImageLibrary=Manage Image Library
 SystemRights_ManageMappingTables=Spravovat mapovac\u00ED tabulky
 SystemRights_ManagePackages=Spravovat bal\u00ED\u010Dky
 SystemRights_ManageScripts=Spravovat knihovnu skript\u016F
