@@ -90,6 +90,7 @@ SystemRights_DeleteAlarms=Delete alarms
 SystemRights_EditEPP=Edit event processing policy
 SystemRights_EditServerConfig=Edit server configuration variables
 SystemRights_ExecuteXMPPCommands=Execute commands via XMPP
+SystemRights_ManageImageLibrary=Manage Image Library
 SystemRights_JobError=Cannot update user object
 SystemRights_JobTitle=Update user database object
 SystemRights_LoginAsMobile=Login as mobile device
