@@ -96,6 +96,7 @@ SystemRights_LoginAsMobile=Login as mobile device
 SystemRights_ManageAgents=Manage agent configurations
 SystemRights_ManageDCISummaryTables=Manage DCI summary tables
 SystemRights_ManageFiles=Manage server files
+SystemRights_ManageImageLibrary=Manage Image Library
 SystemRights_ManageMappingTables=Manage mapping tables
 SystemRights_ManagePackages=Manage packages
 SystemRights_ManageScripts=Manage script library
