@@ -9,6 +9,7 @@
 - Fixed bugs with instance discovery DCIs created from templates
 - New property "runtimeFlags" in NXSL class "Node"
 - New event SYS_IF_PEER_CHANGED (sent when peer change detected in interface)
+- New system permission: Manage Image Library
 - Management console:
    - Fixed bug with red zone display in "last value" dashboard element
    - Edit and delete for alarm comments are working now
